// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File mapping arrow functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 152,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 142,
    },
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 163,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 153,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 67,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 20,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 142,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 67,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping arrow functions with more complex statements 1`] = `
Object {
  "functionCalls": Array [],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 45,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 6,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 121,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 46,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping class functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 149,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 133,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 168,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 150,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 73,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 47,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 110,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 73,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping regular functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 68,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 58,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 92,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 83,
    },
    Object {
      "args": Array [
        "EXPR:gaga...",
      ],
      "end": 109,
      "filename": "src/dir/a.js",
      "name": "FEFE",
      "pos": 94,
    },
    Object {
      "args": Array [
        "33",
      ],
      "end": 108,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 100,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 58,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 20,
    },
  ],
  "includes": Array [],
}
`;
